ncc/testsuite/negative/yield.n
using System.Collections.Generic;

class D
{
  public GetEnumerator () : string
  {
    yield "foo"; // E: yield used in a function returning string
  }
}
